--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@
 MY_ENV_VAR=i-am-an-environment-variable
 GITHUB_CLIENT_ID=49f055c46908d31ae9ff
 GITHUB_CLIENT_SECRET=1bcd330e78eeb81617cd599f65d5eaa192fe47d5
+LOGOUT_URI = http://localhost:3000
